src/test/programs/errors/throw_caught_in_same_sub.bas
sub Main()
    try
        throw "hello"
    catch
        print "caught"
    end try
end sub
--output--
caught
